Add# 添加问卷调查获取唯一码的功能

--- a/templates/components/handle.html
+++ b/templates/components/handle.html
@@ -1,1 +1,6 @@
-<button type='button' class='el-button el-button--success el-button--mini'><span pk='{{ pk }}'>查看报告</span></button><button type='button' class='el-button el-button--default el-button--mini'><span pk='{{ pk }}'>编辑</span></button>
+<button type='button' class='el-button el-button--success el-button--mini'>
+  <span pk='{{ pk }}'>查看报告</span>
+</button>
+<a href="{% url 'survey-download' pk %}" class='el-button el-button--default el-button--mini'>
+  <span pk='{{ pk }}'>下载</span>
+</a>
