--- a/templates/web/detail.html
+++ b/templates/web/detail.html
@@ -1,6 +1,8 @@
 {% extends 'web/public/layout.html' %}
 {% block app-page %}
-  <div class="survey-detail" id="">
+  <div class="survey-detail" id="{{ pk }}">
+    <el-input class="col-md-3" v-model="uniqueCode" placeholder="请输入唯一码"></el-input>
+    <hr>
     <el-form ref="form" :model="forms" label-width="80px" label-position="top">
       <el-form-item v-for="(form, index) in forms" :label="form.name">
         <el-input v-if="form.answer_type == 'suggestion'" type="textarea" v-model="form.value"></el-input>
@@ -22,7 +24,8 @@
     new Vue({
       el: '#app',
       data: {
-        forms: []
+        forms: [],
+        uniqueCode: "",
       },
       mounted() {
         this.initFormData()
@@ -30,14 +33,23 @@
       computed: {},
       methods: {
         initFormData() {
-          var vm = this;
-          axios.get(`/api/surveys/1/`).then(function (resp) {
+          let vm = this;
+          let pk = $("div.survey-detail").prop("id");
+          axios.get(`/api/surveys/${pk}/`).then(function (resp) {
             vm.forms = resp.data;
           })
         },
         onSubmit() {
-          console.log('submit!');
-          console.log(this.getFormData());
+          let data = this.getFormData();
+          let pk = $("div.survey-detail").prop("id");
+          axios.post(
+            `/api/surveys/${pk}/`, {
+              "data": data,
+              "unique_code": this.uniqueCode,
+            }
+            ).then(function (resp) {
+            console.log(resp);
+          })
         },
         getFormData() {
           return this.forms
