--- a/templates/web/public/base.html
+++ b/templates/web/public/base.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>VueDrf问卷调查管理系统</title>
+  <title>问卷调查管理系统</title>
   <!-- Add this to <head> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
   <!-- 引入样式 -->
-  <link rel="stylesheet" href="{% static 'css/element.css' %}">
+{#  <link rel="stylesheet" href="{% static 'css/element.css' %}">#}
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   <style>
     #app {
       margin-top: 30px;
@@ -27,6 +28,8 @@
   <script src="{% static 'js/element-ui.js' %}"></script>
   <script src="{% static 'js/axios.js' %}"></script>
   <script src="{% static 'js/jquery.js' %}"></script>
+  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   {% block js %}{% endblock %}
 </body>
 </html>
